// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WebService > Nginx > Allows to create nginx container > container 1`] = `
{
  "image": "public.ecr.aws/nginx/nginx:1.21.5",
  "imagePullPolicy": "IfNotPresent",
  "livenessProbe": {
    "failureThreshold": 3,
    "httpGet": {
      "path": "/livez",
      "port": 80,
    },
    "initialDelaySeconds": 0,
    "periodSeconds": 10,
    "successThreshold": 1,
    "timeoutSeconds": 2,
  },
  "name": "nginx",
  "ports": [
    {
      "containerPort": 80,
      "protocol": "TCP",
    },
  ],
  "readinessProbe": {
    "failureThreshold": 2,
    "httpGet": {
      "path": "/livez",
      "port": 80,
    },
    "initialDelaySeconds": 0,
    "periodSeconds": 30,
    "successThreshold": 1,
    "timeoutSeconds": 10,
  },
  "resources": {
    "limits": {
      "memory": "128Mi",
    },
    "requests": {
      "cpu": "50m",
      "memory": "32Mi",
    },
  },
  "volumeMounts": [
    {
      "mountPath": "/etc/nginx/conf.d",
      "name": "nginx-config",
      "readOnly": true,
    },
  ],
}
`;

exports[`WebService > Nginx > Allows to create nginx container > volumes 1`] = `
[
  {
    "configMap": {
      "defaultMode": 292,
      "name": "test-nginx-config-c80869a4",
    },
    "name": "nginx-config",
  },
]
`;

exports[`WebService > Nginx > Validates that application port and nginx port are not the same 1`] = `[Error: Application and nginx ports must be different]`;

exports[`WebService > Props > All the props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "talis.io/chat": "https://example.slack.com/archives/ABCDEF123",
        "talis.io/description": "Test web service",
        "talis.io/graphs": "https://example.io/grafana",
        "talis.io/issues": "https://example.io/repo/issues",
        "talis.io/logs": "https://example.io/loki",
        "talis.io/repository": "https://example.io/repo",
        "talis.io/runbook": "https://example.io/wiki/runbook",
        "talis.io/uptime": "https://example.io/uptime",
        "talis.io/url": "https://api.example.com/",
      },
      "labels": {
        "app": "my-app",
        "canary": "false",
        "environment": "test",
        "foo": "bar",
        "instance": "my-app",
        "region": "testing",
        "release": "test-123",
        "role": "server",
      },
      "name": "test-web-web-service-c828a686",
      "namespace": "props-test",
    },
    "spec": {
      "ports": [
        {
          "port": 80,
          "protocol": "TCP",
          "targetPort": 80,
        },
      ],
      "selector": {
        "app": "my-app",
        "foo": "bar",
        "instance": "my-app",
        "role": "server",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
      "annotations": {
        "alb.ingress.kubernetes.io/actions.server-status-rule": "{"type":"fixed-response","fixedResponseConfig":{"statusCode":"404","contentType":"text/plain","messageBody":"404: Not Found"}}",
        "alb.ingress.kubernetes.io/healthcheck-path": "/ping",
        "alb.ingress.kubernetes.io/ip-address-type": "dualstack",
        "alb.ingress.kubernetes.io/listen-ports": "[{"HTTP":80},{"HTTPS":443}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "props-test-api-test-testing",
        "alb.ingress.kubernetes.io/ssl-policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "service=my-app,instance=web,environment=test",
        "alb.ingress.kubernetes.io/target-type": "ip",
        "external-dns.alpha.kubernetes.io/hostname": "api.example.com",
      },
      "labels": {
        "app": "my-app",
        "canary": "false",
        "environment": "test",
        "foo": "bar",
        "instance": "my-app",
        "region": "testing",
        "release": "test-123",
        "role": "server",
      },
      "name": "test-web-web-ingress-c8ed2b8e",
      "namespace": "props-test",
    },
    "spec": {
      "defaultBackend": {
        "service": {
          "name": "test-web-web-service-c828a686",
          "port": {
            "number": 80,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internet-facing",
      "rules": [
        {
          "host": "api2.example.com",
          "http": {
            "paths": [
              {
                "backend": {
                  "service": {
                    "name": "test-web-web-service-c828a686",
                    "port": {
                      "number": 80,
                    },
                  },
                },
                "path": "/",
                "pathType": "Prefix",
              },
            ],
          },
        },
        {
          "http": {
            "paths": [
              {
                "backend": {
                  "service": {
                    "name": "server-status-rule",
                    "port": {
                      "name": "use-annotation",
                    },
                  },
                },
                "path": "/server-status",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": [
        {
          "hosts": [
            "*.example.com",
          ],
        },
      ],
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app": "my-app",
        "canary": "false",
        "environment": "test",
        "foo": "bar",
        "instance": "my-app",
        "region": "testing",
        "release": "test-123",
        "role": "server",
      },
      "name": "test-web-c883b2c8",
      "namespace": "props-test",
    },
    "spec": {
      "revisionHistoryLimit": 5,
      "selector": {
        "matchLabels": {
          "app": "my-app",
          "canary": "false",
          "foo": "bar",
          "instance": "my-app",
          "role": "server",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "my-app",
            "canary": "false",
            "environment": "test",
            "foo": "bar",
            "instance": "my-app",
            "region": "testing",
            "release": "test-123",
            "role": "server",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "role": "server",
                      },
                    },
                    "topologyKey": "kubernetes.io/hostname",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": true,
          "containers": [
            {
              "args": [
                "--foo",
                "bar",
              ],
              "command": [
                "/bin/sh",
                "-c",
                "echo hello",
              ],
              "env": [
                {
                  "name": "FOO",
                  "value": "bar",
                },
              ],
              "envFrom": [
                {
                  "configMapRef": {
                    "name": "foo-config",
                  },
                },
              ],
              "image": "my-image",
              "imagePullPolicy": "Always",
              "lifecycle": {
                "preStop": {
                  "exec": {
                    "command": [
                      "/bin/sh",
                      "-c",
                      "echo hello",
                    ],
                  },
                },
              },
              "livenessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/health/alive",
                  "port": 3000,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 2,
              },
              "name": "my-container",
              "ports": [
                {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/health/ready",
                  "port": 3000,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 15,
                "successThreshold": 1,
                "timeoutSeconds": 2,
              },
              "resources": {
                "limits": {
                  "cpu": 1,
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": 0.1,
                  "memory": "100Mi",
                },
              },
              "securityContext": {
                "runAsGroup": 1000,
                "runAsNonRoot": true,
                "runAsUser": 1000,
              },
              "startupProbe": {
                "failureThreshold": 30,
                "httpGet": {
                  "path": "/health/alive",
                  "port": 3000,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 2,
              },
              "volumeMounts": [
                {
                  "mountPath": "/data/foo",
                  "name": "foo-volume",
                  "readOnly": true,
                },
              ],
              "workingDir": "/some/path",
            },
            {
              "image": "second-image",
              "name": "secondary",
            },
            {
              "image": "ubuntu/nginx:1.18-21.10_edge",
              "imagePullPolicy": "Always",
              "livenessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/livez",
                  "port": 80,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 2,
              },
              "name": "nginx",
              "ports": [
                {
                  "containerPort": 80,
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "failureThreshold": 2,
                "httpGet": {
                  "path": "/livez",
                  "port": 80,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 30,
                "successThreshold": 1,
                "timeoutSeconds": 10,
              },
              "resources": {
                "limits": {
                  "memory": "128Mi",
                },
                "requests": {
                  "cpu": "50m",
                  "memory": "32Mi",
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/etc/nginx/conf.d",
                  "name": "nginx-config",
                  "readOnly": true,
                },
              ],
            },
          ],
          "dnsConfig": {
            "options": [
              {
                "name": "ndots",
                "value": "2",
              },
            ],
          },
          "dnsPolicy": "ClusterFirst",
          "enableServiceLinks": false,
          "hostAliases": [
            {
              "hostnames": [
                "foo.example.com",
                "bar.example.com",
              ],
              "ip": "127.0.0.1",
            },
          ],
          "imagePullSecrets": [
            {
              "name": "foo-secret",
            },
          ],
          "initContainers": [
            {
              "command": [
                "/bin/sh",
                "-c",
                "echo hello",
              ],
              "image": "busybox:1.35.0",
              "name": "init-container",
            },
          ],
          "preemptionPolicy": "PreemptLowerPriority",
          "priorityClassName": "high-priority",
          "securityContext": {
            "fsGroup": 1000,
          },
          "serviceAccountName": "service-account",
          "setHostnameAsFQDN": false,
          "shareProcessNamespace": false,
          "subdomain": "sub",
          "terminationGracePeriodSeconds": 60,
          "tolerations": [
            {
              "effect": "NoSchedule",
              "operator": "Exists",
            },
          ],
          "volumes": [
            {
              "awsElasticBlockStore": {
                "fsType": "ext4",
                "readOnly": true,
                "volumeID": "vol-123",
              },
              "name": "foo-volume",
            },
            {
              "configMap": {
                "defaultMode": 292,
                "name": "nginx-config",
              },
              "name": "nginx-config",
            },
          ],
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "labels": {
        "app": "my-app",
        "canary": "false",
        "environment": "test",
        "foo": "bar",
        "instance": "my-app",
        "region": "testing",
        "role": "server",
      },
      "name": "test-web-web-hpa-c801f515",
      "namespace": "props-test",
    },
    "spec": {
      "maxReplicas": 10,
      "metrics": [
        {
          "resource": {
            "name": "cpu",
            "target": {
              "averageUtilization": 100,
              "type": "Utilization",
            },
          },
          "type": "Resource",
        },
      ],
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "test-web-c883b2c8",
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "app": "my-app",
        "canary": "false",
        "environment": "test",
        "foo": "bar",
        "instance": "my-app",
        "region": "testing",
        "role": "server",
      },
      "name": "test-web-web-pdb-c86ae522",
      "namespace": "props-test",
    },
    "spec": {
      "maxUnavailable": "25%",
      "selector": {
        "matchLabels": {
          "app": "my-app",
          "canary": "false",
          "foo": "bar",
          "instance": "my-app",
          "role": "server",
        },
      },
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "talis.io/chat": "https://example.slack.com/archives/ABCDEF123",
        "talis.io/description": "Test web service",
        "talis.io/graphs": "https://example.io/grafana",
        "talis.io/issues": "https://example.io/repo/issues",
        "talis.io/logs": "https://example.io/loki",
        "talis.io/repository": "https://example.io/repo",
        "talis.io/runbook": "https://example.io/wiki/runbook",
        "talis.io/uptime": "https://example.io/uptime",
        "talis.io/url": "https://api.example.com/",
      },
      "labels": {
        "app": "my-app",
        "canary": "true",
        "environment": "test",
        "foo": "bar",
        "instance": "my-app",
        "region": "testing",
        "release": "test-123",
        "role": "server",
      },
      "name": "test-web-web-canary-service-c852817c",
      "namespace": "props-test",
    },
    "spec": {
      "ports": [
        {
          "port": 80,
          "protocol": "TCP",
          "targetPort": 80,
        },
      ],
      "selector": {
        "app": "my-app",
        "canary": "true",
        "foo": "bar",
        "instance": "my-app",
        "role": "server",
      },
      "type": "ClusterIP",
    },
  },
  {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
      "annotations": {
        "alb.ingress.kubernetes.io/actions.server-status-rule": "{"type":"fixed-response","fixedResponseConfig":{"statusCode":"404","contentType":"text/plain","messageBody":"404: Not Found"}}",
        "alb.ingress.kubernetes.io/healthcheck-path": "/ping",
        "alb.ingress.kubernetes.io/ip-address-type": "dualstack",
        "alb.ingress.kubernetes.io/listen-ports": "[{"HTTP":80},{"HTTPS":443}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "props-test-api-c-test-testing",
        "alb.ingress.kubernetes.io/ssl-policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "service=my-app,instance=web,environment=test",
        "alb.ingress.kubernetes.io/target-type": "ip",
      },
      "labels": {
        "app": "my-app",
        "canary": "true",
        "environment": "test",
        "foo": "bar",
        "instance": "my-app",
        "region": "testing",
        "release": "test-123",
        "role": "server",
      },
      "name": "test-web-web-canary-ingress-c8e1943e",
      "namespace": "props-test",
    },
    "spec": {
      "defaultBackend": {
        "service": {
          "name": "test-web-web-canary-service-c852817c",
          "port": {
            "number": 80,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internet-facing",
      "rules": [
        {
          "http": {
            "paths": [
              {
                "backend": {
                  "service": {
                    "name": "server-status-rule",
                    "port": {
                      "name": "use-annotation",
                    },
                  },
                },
                "path": "/server-status",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
      "tls": [
        {
          "hosts": [
            "*.example.com",
          ],
        },
      ],
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app": "my-app",
        "canary": "true",
        "environment": "test",
        "foo": "bar",
        "instance": "my-app",
        "region": "testing",
        "release": "test-123",
        "role": "server",
      },
      "name": "test-web-web-canary-c87fce47",
      "namespace": "props-test",
    },
    "spec": {
      "replicas": 1,
      "revisionHistoryLimit": 5,
      "selector": {
        "matchLabels": {
          "app": "my-app",
          "canary": "true",
          "foo": "bar",
          "instance": "my-app",
          "role": "server",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "my-app",
            "canary": "true",
            "environment": "test",
            "foo": "bar",
            "instance": "my-app",
            "region": "testing",
            "release": "test-123",
            "role": "server",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "role": "server",
                      },
                    },
                    "topologyKey": "kubernetes.io/hostname",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": true,
          "containers": [
            {
              "args": [
                "--foo",
                "bar",
              ],
              "command": [
                "/bin/sh",
                "-c",
                "echo hello",
              ],
              "env": [
                {
                  "name": "FOO",
                  "value": "bar",
                },
              ],
              "envFrom": [
                {
                  "configMapRef": {
                    "name": "foo-config",
                  },
                },
              ],
              "image": "my-image",
              "imagePullPolicy": "Always",
              "lifecycle": {
                "preStop": {
                  "exec": {
                    "command": [
                      "/bin/sh",
                      "-c",
                      "echo hello",
                    ],
                  },
                },
              },
              "livenessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/health/alive",
                  "port": 3000,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 2,
              },
              "name": "my-container",
              "ports": [
                {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/health/ready",
                  "port": 3000,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 15,
                "successThreshold": 1,
                "timeoutSeconds": 2,
              },
              "resources": {
                "limits": {
                  "cpu": 1,
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": 0.1,
                  "memory": "100Mi",
                },
              },
              "securityContext": {
                "runAsGroup": 1000,
                "runAsNonRoot": true,
                "runAsUser": 1000,
              },
              "startupProbe": {
                "failureThreshold": 30,
                "httpGet": {
                  "path": "/health/alive",
                  "port": 3000,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 2,
              },
              "volumeMounts": [
                {
                  "mountPath": "/data/foo",
                  "name": "foo-volume",
                  "readOnly": true,
                },
              ],
              "workingDir": "/some/path",
            },
            {
              "image": "second-image",
              "name": "secondary",
            },
            {
              "image": "ubuntu/nginx:1.18-21.10_edge",
              "imagePullPolicy": "Always",
              "livenessProbe": {
                "failureThreshold": 3,
                "httpGet": {
                  "path": "/livez",
                  "port": 80,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 10,
                "successThreshold": 1,
                "timeoutSeconds": 2,
              },
              "name": "nginx",
              "ports": [
                {
                  "containerPort": 80,
                  "protocol": "TCP",
                },
              ],
              "readinessProbe": {
                "failureThreshold": 2,
                "httpGet": {
                  "path": "/livez",
                  "port": 80,
                },
                "initialDelaySeconds": 0,
                "periodSeconds": 30,
                "successThreshold": 1,
                "timeoutSeconds": 10,
              },
              "resources": {
                "limits": {
                  "memory": "128Mi",
                },
                "requests": {
                  "cpu": "50m",
                  "memory": "32Mi",
                },
              },
              "volumeMounts": [
                {
                  "mountPath": "/etc/nginx/conf.d",
                  "name": "nginx-config",
                  "readOnly": true,
                },
              ],
            },
          ],
          "dnsConfig": {
            "options": [
              {
                "name": "ndots",
                "value": "2",
              },
            ],
          },
          "dnsPolicy": "ClusterFirst",
          "enableServiceLinks": false,
          "hostAliases": [
            {
              "hostnames": [
                "foo.example.com",
                "bar.example.com",
              ],
              "ip": "127.0.0.1",
            },
          ],
          "imagePullSecrets": [
            {
              "name": "foo-secret",
            },
          ],
          "initContainers": [
            {
              "command": [
                "/bin/sh",
                "-c",
                "echo hello",
              ],
              "image": "busybox:1.35.0",
              "name": "init-container",
            },
          ],
          "preemptionPolicy": "PreemptLowerPriority",
          "priorityClassName": "high-priority",
          "securityContext": {
            "fsGroup": 1000,
          },
          "serviceAccountName": "service-account",
          "setHostnameAsFQDN": false,
          "shareProcessNamespace": false,
          "subdomain": "sub",
          "terminationGracePeriodSeconds": 60,
          "tolerations": [
            {
              "effect": "NoSchedule",
              "operator": "Exists",
            },
          ],
          "volumes": [
            {
              "awsElasticBlockStore": {
                "fsType": "ext4",
                "readOnly": true,
                "volumeID": "vol-123",
              },
              "name": "foo-volume",
            },
            {
              "configMap": {
                "defaultMode": 292,
                "name": "nginx-config",
              },
              "name": "nginx-config",
            },
          ],
        },
      },
    },
  },
]
`;

exports[`WebService > Props > Allows specifying custom logic to make affinity 1`] = `
{
  "podAffinity": {
    "requiredDuringSchedulingIgnoredDuringExecution": [
      {
        "labelSelector": {
          "matchExpressions": [
            {
              "key": "role",
              "operator": "In",
              "values": [
                "server",
              ],
            },
          ],
        },
        "topologyKey": "kubernetes.io/hostname",
      },
    ],
  },
}
`;

exports[`WebService > Props > Either horizontalPodAutoscaler or replicas can be specified, not both 1`] = `[Error: Either horizontalPodAutoscaler or replicas can be specified, not both]`;

exports[`WebService > Props > Either horizontalPodAutoscaler or replicas must be specified 1`] = `[Error: Either horizontalPodAutoscaler or replicas must be specified]`;

exports[`WebService > Props > Either minAvailable or maxUnavailable can be specified for podDisruptionBudget, not both 1`] = `[Error: Either horizontalPodAutoscaler or replicas must be specified]`;

exports[`WebService > Props > Either minAvailable or maxUnavailable must be specified for podDisruptionBudget 1`] = `[Error: Either horizontalPodAutoscaler or replicas must be specified]`;

exports[`WebService > Props > Horizontal Pod Autoscaler 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "talis.io/chat": "https://example.slack.com/archives/ABCDEF123",
        "talis.io/description": "Test web service",
        "talis.io/graphs": "https://example.io/grafana",
        "talis.io/issues": "https://example.io/repo/issues",
        "talis.io/logs": "https://example.io/loki",
        "talis.io/repository": "https://example.io/repo",
        "talis.io/runbook": "https://example.io/wiki/runbook",
        "talis.io/uptime": "https://example.io/uptime",
        "talis.io/url": "https://api.example.com/",
      },
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web-service",
      "namespace": "test",
    },
    "spec": {
      "ports": [
        {
          "port": 3000,
          "protocol": "TCP",
          "targetPort": 3000,
        },
      ],
      "selector": {
        "instance": "web",
        "role": "server",
      },
      "type": "NodePort",
    },
  },
  {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
      "annotations": {
        "alb.ingress.kubernetes.io/actions.server-status-rule": "{"type":"fixed-response","fixedResponseConfig":{"statusCode":"404","contentType":"text/plain","messageBody":"404: Not Found"}}",
        "alb.ingress.kubernetes.io/listen-ports": "[{"HTTP":80}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "test-web-develop",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "instance=web",
        "alb.ingress.kubernetes.io/target-type": "instance",
      },
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web-ingress",
      "namespace": "test",
    },
    "spec": {
      "defaultBackend": {
        "service": {
          "name": "web-service",
          "port": {
            "number": 3000,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internet-facing",
      "rules": [
        {
          "http": {
            "paths": [
              {
                "backend": {
                  "service": {
                    "name": "server-status-rule",
                    "port": {
                      "name": "use-annotation",
                    },
                  },
                },
                "path": "/server-status",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web",
      "namespace": "test",
    },
    "spec": {
      "revisionHistoryLimit": 1,
      "selector": {
        "matchLabels": {
          "instance": "web",
          "role": "server",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "instance": "web",
            "release": "test-123",
            "role": "server",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "instance": "web",
                        "role": "server",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": [
            {
              "image": "my-image",
              "imagePullPolicy": "IfNotPresent",
              "name": "app",
              "ports": [
                {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "resources": {
                "requests": {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "priorityClassName": "web",
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "labels": {
        "instance": "web",
        "role": "server",
      },
      "name": "web-hpa",
      "namespace": "test",
    },
    "spec": {
      "maxReplicas": 4,
      "metrics": [
        {
          "resource": {
            "name": "cpu",
            "target": {
              "averageUtilization": 100,
              "type": "Utilization",
            },
          },
          "type": "Resource",
        },
      ],
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "web",
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "instance": "web",
        "role": "server",
      },
      "name": "web-pdb",
      "namespace": "test",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "instance": "web",
          "role": "server",
        },
      },
    },
  },
]
`;

exports[`WebService > Props > Horizontal Pod Autoscaler for both memory and cpu 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "talis.io/chat": "https://example.slack.com/archives/ABCDEF123",
        "talis.io/description": "Test web service",
        "talis.io/graphs": "https://example.io/grafana",
        "talis.io/issues": "https://example.io/repo/issues",
        "talis.io/logs": "https://example.io/loki",
        "talis.io/repository": "https://example.io/repo",
        "talis.io/runbook": "https://example.io/wiki/runbook",
        "talis.io/uptime": "https://example.io/uptime",
        "talis.io/url": "https://api.example.com/",
      },
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web-service",
      "namespace": "test",
    },
    "spec": {
      "ports": [
        {
          "port": 3000,
          "protocol": "TCP",
          "targetPort": 3000,
        },
      ],
      "selector": {
        "instance": "web",
        "role": "server",
      },
      "type": "NodePort",
    },
  },
  {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
      "annotations": {
        "alb.ingress.kubernetes.io/actions.server-status-rule": "{"type":"fixed-response","fixedResponseConfig":{"statusCode":"404","contentType":"text/plain","messageBody":"404: Not Found"}}",
        "alb.ingress.kubernetes.io/listen-ports": "[{"HTTP":80}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "test-web-develop",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "instance=web",
        "alb.ingress.kubernetes.io/target-type": "instance",
      },
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web-ingress",
      "namespace": "test",
    },
    "spec": {
      "defaultBackend": {
        "service": {
          "name": "web-service",
          "port": {
            "number": 3000,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internet-facing",
      "rules": [
        {
          "http": {
            "paths": [
              {
                "backend": {
                  "service": {
                    "name": "server-status-rule",
                    "port": {
                      "name": "use-annotation",
                    },
                  },
                },
                "path": "/server-status",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web",
      "namespace": "test",
    },
    "spec": {
      "revisionHistoryLimit": 1,
      "selector": {
        "matchLabels": {
          "instance": "web",
          "role": "server",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "instance": "web",
            "release": "test-123",
            "role": "server",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "instance": "web",
                        "role": "server",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": [
            {
              "image": "my-image",
              "imagePullPolicy": "IfNotPresent",
              "name": "app",
              "ports": [
                {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "resources": {
                "requests": {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "priorityClassName": "web",
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "labels": {
        "instance": "web",
        "role": "server",
      },
      "name": "web-hpa",
      "namespace": "test",
    },
    "spec": {
      "maxReplicas": 4,
      "metrics": [
        {
          "resource": {
            "name": "cpu",
            "target": {
              "averageUtilization": 80,
              "type": "Utilization",
            },
          },
          "type": "Resource",
        },
        {
          "resource": {
            "name": "memory",
            "target": {
              "averageUtilization": 100,
              "type": "Utilization",
            },
          },
          "type": "Resource",
        },
      ],
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "web",
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "instance": "web",
        "role": "server",
      },
      "name": "web-pdb",
      "namespace": "test",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "instance": "web",
          "role": "server",
        },
      },
    },
  },
]
`;

exports[`WebService > Props > Horizontal Pod Autoscaler for memory 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "talis.io/chat": "https://example.slack.com/archives/ABCDEF123",
        "talis.io/description": "Test web service",
        "talis.io/graphs": "https://example.io/grafana",
        "talis.io/issues": "https://example.io/repo/issues",
        "talis.io/logs": "https://example.io/loki",
        "talis.io/repository": "https://example.io/repo",
        "talis.io/runbook": "https://example.io/wiki/runbook",
        "talis.io/uptime": "https://example.io/uptime",
        "talis.io/url": "https://api.example.com/",
      },
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web-service",
      "namespace": "test",
    },
    "spec": {
      "ports": [
        {
          "port": 3000,
          "protocol": "TCP",
          "targetPort": 3000,
        },
      ],
      "selector": {
        "instance": "web",
        "role": "server",
      },
      "type": "NodePort",
    },
  },
  {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
      "annotations": {
        "alb.ingress.kubernetes.io/actions.server-status-rule": "{"type":"fixed-response","fixedResponseConfig":{"statusCode":"404","contentType":"text/plain","messageBody":"404: Not Found"}}",
        "alb.ingress.kubernetes.io/listen-ports": "[{"HTTP":80}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "test-web-develop",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "instance=web",
        "alb.ingress.kubernetes.io/target-type": "instance",
      },
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web-ingress",
      "namespace": "test",
    },
    "spec": {
      "defaultBackend": {
        "service": {
          "name": "web-service",
          "port": {
            "number": 3000,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internet-facing",
      "rules": [
        {
          "http": {
            "paths": [
              {
                "backend": {
                  "service": {
                    "name": "server-status-rule",
                    "port": {
                      "name": "use-annotation",
                    },
                  },
                },
                "path": "/server-status",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web",
      "namespace": "test",
    },
    "spec": {
      "revisionHistoryLimit": 1,
      "selector": {
        "matchLabels": {
          "instance": "web",
          "role": "server",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "instance": "web",
            "release": "test-123",
            "role": "server",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "instance": "web",
                        "role": "server",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": [
            {
              "image": "my-image",
              "imagePullPolicy": "IfNotPresent",
              "name": "app",
              "ports": [
                {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "resources": {
                "requests": {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "priorityClassName": "web",
        },
      },
    },
  },
  {
    "apiVersion": "autoscaling/v2",
    "kind": "HorizontalPodAutoscaler",
    "metadata": {
      "labels": {
        "instance": "web",
        "role": "server",
      },
      "name": "web-hpa",
      "namespace": "test",
    },
    "spec": {
      "maxReplicas": 4,
      "metrics": [
        {
          "resource": {
            "name": "memory",
            "target": {
              "averageUtilization": 100,
              "type": "Utilization",
            },
          },
          "type": "Resource",
        },
      ],
      "minReplicas": 2,
      "scaleTargetRef": {
        "apiVersion": "apps/v1",
        "kind": "Deployment",
        "name": "web",
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "instance": "web",
        "role": "server",
      },
      "name": "web-pdb",
      "namespace": "test",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "instance": "web",
          "role": "server",
        },
      },
    },
  },
]
`;

exports[`WebService > Props > Load balancer name must not be empty 1`] = `[Error: Load balancer name must not be empty]`;

exports[`WebService > Props > Load balancer name must not exceed 32 characters 1`] = `[Error: Load balancer name must not exceed 32 characters. Given: test-web-non-abbreviable-env-test]`;

exports[`WebService > Props > Minimal required props 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Service",
    "metadata": {
      "annotations": {
        "talis.io/chat": "https://example.slack.com/archives/ABCDEF123",
        "talis.io/description": "Test web service",
        "talis.io/graphs": "https://example.io/grafana",
        "talis.io/issues": "https://example.io/repo/issues",
        "talis.io/logs": "https://example.io/loki",
        "talis.io/repository": "https://example.io/repo",
        "talis.io/runbook": "https://example.io/wiki/runbook",
        "talis.io/uptime": "https://example.io/uptime",
        "talis.io/url": "https://api.example.com/",
      },
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web-service",
      "namespace": "test",
    },
    "spec": {
      "ports": [
        {
          "port": 3000,
          "protocol": "TCP",
          "targetPort": 3000,
        },
      ],
      "selector": {
        "instance": "web",
        "role": "server",
      },
      "type": "NodePort",
    },
  },
  {
    "apiVersion": "networking.k8s.io/v1",
    "kind": "Ingress",
    "metadata": {
      "annotations": {
        "alb.ingress.kubernetes.io/actions.server-status-rule": "{"type":"fixed-response","fixedResponseConfig":{"statusCode":"404","contentType":"text/plain","messageBody":"404: Not Found"}}",
        "alb.ingress.kubernetes.io/listen-ports": "[{"HTTP":80}]",
        "alb.ingress.kubernetes.io/load-balancer-attributes": "idle_timeout.timeout_seconds=60",
        "alb.ingress.kubernetes.io/load-balancer-name": "test-web-develop",
        "alb.ingress.kubernetes.io/success-codes": "200,303",
        "alb.ingress.kubernetes.io/tags": "instance=web",
        "alb.ingress.kubernetes.io/target-type": "instance",
      },
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web-ingress",
      "namespace": "test",
    },
    "spec": {
      "defaultBackend": {
        "service": {
          "name": "web-service",
          "port": {
            "number": 3000,
          },
        },
      },
      "ingressClassName": "aws-load-balancer-internet-facing",
      "rules": [
        {
          "http": {
            "paths": [
              {
                "backend": {
                  "service": {
                    "name": "server-status-rule",
                    "port": {
                      "name": "use-annotation",
                    },
                  },
                },
                "path": "/server-status",
                "pathType": "Prefix",
              },
            ],
          },
        },
      ],
    },
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "instance": "web",
        "release": "test-123",
        "role": "server",
      },
      "name": "web",
      "namespace": "test",
    },
    "spec": {
      "replicas": 1,
      "revisionHistoryLimit": 1,
      "selector": {
        "matchLabels": {
          "instance": "web",
          "role": "server",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "instance": "web",
            "release": "test-123",
            "role": "server",
          },
        },
        "spec": {
          "affinity": {
            "podAntiAffinity": {
              "preferredDuringSchedulingIgnoredDuringExecution": [
                {
                  "podAffinityTerm": {
                    "labelSelector": {
                      "matchLabels": {
                        "instance": "web",
                        "role": "server",
                      },
                    },
                    "topologyKey": "topology.kubernetes.io/zone",
                  },
                  "weight": 100,
                },
              ],
            },
          },
          "automountServiceAccountToken": false,
          "containers": [
            {
              "image": "my-image",
              "imagePullPolicy": "IfNotPresent",
              "name": "app",
              "ports": [
                {
                  "containerPort": 3000,
                  "protocol": "TCP",
                },
              ],
              "resources": {
                "requests": {
                  "cpu": "100m",
                  "memory": "100Mi",
                },
              },
            },
          ],
          "priorityClassName": "web",
        },
      },
    },
  },
]
`;

exports[`WebService > Props > Release stage must be specified when canary deployments are enabled 1`] = `[Error: Release stage must be specified when canary deployments are enabled]`;

exports[`WebService > Props > Validates load balancer name even if overridden 1`] = `[Error: Load balancer name must not exceed 32 characters. Given: a-load-balancer-name-exceeding-32]`;

exports[`WebService > Props > horizontalPodAutoscaler requires at least one of cpuTargetUtilization or memoryTargetUtilization 1`] = `[Error: Either cpuTargetUtilization or memoryTargetUtilization must be specified to use a horizontalPodAutoscaler]`;
